--- a/src/Resources/application.properties
+++ b/src/Resources/application.properties
@@ -1,6 +1,6 @@
-spring.jpa.database-platform=com.example.demo.configs.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=none
-hibernate.dialect=com.example.demo.configs.SQLiteDialect
-
-spring.jpa.show-sql=false
+spring.datasource.url=jdbc:mysql://localhost:3306/db_example?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=mysql
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
